added post documentation
