# backend/learning-api/app/Http/Controllers/StudentController.php
@@ -4,34 +4,35 @@ namespace App\Http\Controllers;
 
 use App\Student;
 use Illuminate\Http\Request;
+
 /**
-* @OA\Info(title="API Course", version="1.0")
-*
-* @OA\Server(url="http://localhost:8000")
-*
-* @OA\Tag(
-*     name="StudentController",
-*     description="API Endpoints of Students"
-* )
-*/
+ * 
+ *
+ * @OA\Server(url="http://localhost:8000")
+ *
+ * @OA\Tag(
+ *     name="StudentController",
+ *     description="API Endpoints of Students"
+ * )
+ */
 
 class StudentController extends Controller
 {
     /**
-    * @OA\Get(
-    *     path="/api/students",
-    *     tags={"StudentController"},
-    *     summary="Mostrar estudiantes",
-    *     @OA\Response(
-    *         response=200,
-    *         description="Muestra todos los estudiantes."
-    *     ),
-    *     @OA\Response(
-    *         response="default",
-    *         description="Ha ocurrido un error."
-    *     )
-    * )
-    */
+     * @OA\Get(
+     *     path="/api/students",
+     *     tags={"StudentController"},
+     *     summary="Mostrar estudiantes",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Muestra todos los estudiantes."
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
     /**
      * Display a listing of the resource.
      *
@@ -53,20 +54,35 @@ class StudentController extends Controller
         //
     }
     /**
-    * @OA\Post(
-    *     path="/api/students",
-    *     tags={"StudentController"},
-    *     summary="Subir un estudiante",
-    *     @OA\Response(
-    *         response=200,
-    *         description="Subir un estudiante a la base de datos."
-    *     ),
-    *     @OA\Response(
-    *         response="default",
-    *         description="Ha ocurrido un error."
-    *     )
-    * )
-    */
+     * @OA\Post(
+     *     path="/api/students",
+     *     tags={"StudentController"},
+     *     summary="Subir un estudiante",
+     *     @OA\RequestBody(
+     *       @OA\JsonContent(
+     *            type="object",
+     *            @OA\Property(property="name", type="string",example="Jose"),
+     *            @OA\Property(property="courses", type="array",
+     *               @OA\Items(
+     *                  @OA\Property(
+     *                         property="_id",
+     *                         type="string",
+     *                         example="203912830924812094"
+     *                  )
+     *               )
+     *            )
+     *       )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Subir un estudiante a la base de datos."
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
 
     /**
      * Store a newly created resource in storage.
@@ -77,7 +93,7 @@ class StudentController extends Controller
     public function store(Request $request)
     {
         $student = Student::create($request->all());
-        return response()->json(array_merge(['status' => 'created'],$student));
+        return response()->json(array_merge(['status' => 'created'], $student));
     }
 
     /**
